--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mongoose": "^6.1.5",
     "socket.io": "^4.4.0"
   },
   "devDependencies": {
